add ability to clone repos
* also allow passing of user and token/password via env